# docs/swagger.json
@@ -29,7 +29,7 @@
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/views.User"
+                            "$ref": "#/definitions/models.User"
                         }
                     }
                 ],
@@ -48,6 +48,42 @@
                     },
                     "500": {
                         "description": "内部错误",
+                        "schema": {
+                            "$ref": "#/definitions/models.Result"
+                        }
+                    }
+                }
+            }
+        },
+        "/users": {
+            "get": {
+                "description": "这是一个查询用户列表信息接口",
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "用户相关接口"
+                ],
+                "summary": "分页查询所有用户",
+                "parameters": [
+                    {
+                        "type": "integer",
+                        "default": 0,
+                        "description": "第几页",
+                        "name": "page_index",
+                        "in": "query"
+                    },
+                    {
+                        "type": "integer",
+                        "default": 0,
+                        "description": "每页展示条数",
+                        "name": "page_size",
+                        "in": "query"
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "结果",
                         "schema": {
                             "$ref": "#/definitions/models.Result"
                         }
@@ -158,28 +194,8 @@
                 }
             }
         },
-        "views.User": {
-            "type": "object",
-            "properties": {
-                "age": {
-                    "type": "integer"
-                },
-                "email": {
-                    "type": "string"
-                },
-                "gender": {
-                    "type": "string"
-                },
-                "name": {
-                    "type": "string"
-                },
-                "password": {
-                    "type": "string"
-                },
-                "tell": {
-                    "type": "string"
-                }
-            }
+        "models.User": {
+            "type": "object"
         }
     }
 }
